# neomodel-stubs

./: README.md  pyproject.toml  setup.py
neomodel-stubs/: __init__.pyi  cardinality.pyi  config.pyi  core.pyi  exception.pyi  exceptions.pyi  hooks.pyi  match.pyi  match_q.pyi  properties.pyi  relationship.pyi  relationship_manager.pyi  util.pyi
neomodel-stubs/contrib/: __init__.pyi  semi_structured.pyi
typesafety/: test_stubs.yml
