[tool.poetry]
name = "neomodel-stubs"
version = "0.1.0"
description = "Typing stubs for neomodel"
authors = ["Laurent Savaete <laurent@where.tf>"]
packages = [
    { include = "neomodel-stubs" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mypy-plugins = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
